# AnonymousCoder

./: .env  .gitignore  Dockerfile  README.md  current_details.md  main.py  pyproject.toml  requirements.txt  test_basic.py  trail.py
.circleci/: config.yaml  config.yml
src/agent_project/application/: app.py  app.tcss  chat_history_screen.py  main_screen.py  settings_screen.py
src/agent_project/application/tui/: app.py  app.tcss  main_screen.py  mem_management_screen.py
src/agent_project/config/: config.py
src/agent_project/core/graph/: edges.py  graph.py  nodes.py
src/agent_project/core/prompts/: system_prompt.py
src/agent_project/core/protocols/: file_system_mcp.py
src/agent_project/core/states/: AnonymousState.py  AppStates.py
src/agent_project/core/tools/: __init__.py  ask_user_tool.py  create_or_delete_files.py  diff_files.py  edit_file.py  gate_framework_context.py  generate_plan.py  get_current_directory.py  get_directory_tree.py  get_framework_context.py  get_framework_context_tool.py  grep_code.py  index_code_base.py  read_file.py  shell.py  user_memory.py  vector_data_base_tools.py  vector_database_tools.py  window_power_shell.py  write_code_to_file_path.py
src/agent_project/core/tools/frameworks/: templates.py  web_templates.py
src/agent_project/infrastructure/databases/: .py  llm.py  sql_database.py  vector_database.py
src/agent_project/infrastructure/llm_clients/: llms.py
src/agent_project/infrastructure/monitoring/: tracing.py
src/agent_project/utilities/: config.py  load_json.py  logger.py
tests/: database_test.py  too_call.py
