[project]
name = "refactor-py-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-ollama>=0.3.6",
    "langchain-openai>=0.3.29",
    "langfuse>=3.2.3",
    "langgraph>=0.6.4",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "tenacity>=9.1.2",
]
