[project]
name = "cli-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-groq>=0.3.7",
    "langchain-ollama>=0.3.6",
    "langchain-openai>=0.3.29",
    "langfuse>=3.2.3",
    "langgraph>=0.6.4",
    "loguru>=0.7.3",
    "mcp>=1.13.0",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "sqlalchemy>=2.0.43",
    "sqlite-vec>=0.1.6",
    "tenacity>=9.1.2",
]
